// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownItem component className prop 1`] = `
<div
  className="sc-bdVaJa kRyzRN TEST"
>
  TEST
</div>
`;

exports[`DropdownItem component default snapshot 1`] = `
<div
  className="sc-bdVaJa kRyzRN"
/>
`;

exports[`DropdownItem component renders children 1`] = `
<div
  className="sc-bdVaJa kRyzRN"
>
  TEST
</div>
`;
